fix: bug fixes, parallelism improvements, and minor cleanups (v1.7.0)
Critical fixes:
- Dictionary: HashMap → LinkedHashMap to preserve regex sort order
- EmailSender: replace silent Thread with Future to propagate writer exceptions
- SnmpClient: guard Double.parseDouble against null from multi-OID GET

Parallelism:
- NOCZvit.main: IMAP + Zabbix login + Debtors run concurrently via CompletableFuture
- ImapClient.formatReport: Ping graph downloads parallelized with order preserved
- SnmpClient (Ramos): 7 separate GETs per sensor replaced by one multi-OID GET

Medium priority:
- Config: protect Integer.parseInt for graphwidth/height; return unmodifiableMap for hosts/ramos; add email.sendmail property
- ZabbixClient: check HTTP status in apiCall(); use !result.isEmpty()
- EmailSender: configurable sendmail path, 30s timeout with destroyForcibly, buffer 8192
- Debtors: always log SQL errors (not only in debug mode)
- Dictionary: add ConcurrentHashMap lookup cache

Minor:
- ImapClient: fix PATTERN_ORIGINALFROMNAME (static final, no Pattern.compile); StringBuffer→StringBuilder; entrySet() in filterAndMergeMessages; throw RuntimeException instead of System.exit(2)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_019MqM1Wu6TwgRad8Q4NFXbX